basic page structure and style

--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="resources/css/styles.css">
-	<title>Getting $#it Done!</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono:400,400i" rel="stylesheet">
+  <title>tisket task-it</title>
 </head>
 <body>
 
+	<div class="container">
+		<form>
+			<h1>task-it...</h1>
+			<input name="Task" type="text" placeholder="...a green and yellow basket?">
+		</form>
+		<ul>
+			<li>Task 1</li>
+			<li>Task 2</li>
+			<li>Task 3</li>
+			<li>Task 4</li>
+			<li>Task 5</li>
+			<li>Task 6</li>
+		</ul>
+	</div>
 
+	<footer>
+		<p>©2019 Kyle M. Boling</p>
+	</footer>
 
-	<script type="text/javascript" src="resources/js/js/scripts.js"></script>
+  <script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
