strike-through style created

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono:400,400i" rel="stylesheet">
-  <title>tisket task-it</title>
+  <title>tisket.task-it</title>
 </head>
 <body>
 
@@ -15,12 +15,12 @@
 			<input name="Task" type="text" placeholder="...a green and yellow basket?">
 		</form>
 		<ul>
-			<li>Task 1</li>
-			<li>Task 2</li>
-			<li>Task 3</li>
-			<li>Task 4</li>
-			<li>Task 5</li>
-			<li>Task 6</li>
+			<li>This is task number 1</li>
+			<li>This is task number 2</li>
+			<li>This is task number 3</li>
+			<li>This is task number 4</li>
+			<li>This is task number x</li>
+			<li>This is task number X</li>
 		</ul>
 	</div>
 
