--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono:400,400i" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
   <title>tisket.task-it</title>
 </head>
 <body>
@@ -15,12 +16,12 @@
 			<input name="Task" type="text" placeholder="...a green and yellow basket?">
 		</form>
 		<ul>
-			<li>This is task number 1</li>
+			<li>This is task number 1<i class="fas fa-times"></i></li>
 			<li>This is task number 2</li>
 			<li>This is task number 3</li>
 			<li>This is task number 4</li>
-			<li>This is task number x</li>
-			<li>This is task number X</li>
+			<li>This is task number 5</li>
+			<li>This is task number 6</li>
 		</ul>
 	</div>
 
