input enter event listener working

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
   <title>tisket.task-it</title>
 </head>
 <body>
-
 	<div class="container">
-		<form>
+		<div class="wrapper">
 			<h1>task-it...</h1>
-			<input name="Task" type="text" placeholder="...a green and yellow basket?">
-		</form>
+			<input type="text" name="new-task" placeholder="...a green and yellow basket?" autofocus="autofocus">
+		</div>
 		<ul>
 			<li>This is task number 1<i class="fas fa-times"></i></li>
 			<li>This is task number 2</li>
