add task function and event handler implemented

--- a/index.html
+++ b/index.html
@@ -3,24 +3,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width initial-scale=1">
+  <title>tisket.task-it</title>
+
+  <!--Google Font Embed-->
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono:400,400i" rel="stylesheet">
+
+	<!--Stylesheets-->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <title>tisket.task-it</title>
 </head>
 <body>
+
 	<div class="container">
-		<div class="wrapper">
-			<h1>task-it...</h1>
-			<input type="text" name="new-task" placeholder="...a green and yellow basket?" autofocus="autofocus">
-		</div>
+		<h1>task-it...</h1>
+		<input type="text" placeholder="...a green and yellow basket?" autofocus="autofocus">
 		<ul>
 			<li>This is task number 1<i class="fas fa-times"></i></li>
 			<li>This is task number 2</li>
-			<li>This is task number 3</li>
-			<li>This is task number 4</li>
-			<li>This is task number 5</li>
-			<li>This is task number 6</li>
 		</ul>
 	</div>
 
@@ -28,6 +27,7 @@
 		<p>©2019 Kyle M. Boling</p>
 	</footer>
 
+	<!--JavaScript -->
   <script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
