--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 	<div class="container">
 		<h1>task-it...</h1>
 		<input type="text" placeholder="...a green and yellow basket?" autofocus="autofocus">
-		<ul>
-			<li>This is task number 1<i class="fas fa-times"></i></li>
-			<li>This is task number 2</li>
+		<ul class="todo" id="todo">
+			<!--<li>This is a test item<a class="btn" href="#"><i class="fas fa-times"></i></a></li>-->
 		</ul>
+		<!--<ul class="todo" id="completed"></ul>-->
 	</div>
 
 	<footer>
