--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 
 	<div class="container">
+		<h6>tisket</h6>
 		<h1>task-it...</h1>
 		<input type="text" placeholder="...a green and yellow basket?" autofocus="autofocus">
 		<ul class="todo" id="todo">
