complete function polished

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
 		<h1>task-it...</h1>
 		<input type="text" placeholder="...a green and yellow basket?" autofocus="autofocus">
 		<ul class="todo" id="todo">
-			<!--<li>This is a test item<a class="btn" href="#"><i class="fas fa-times"></i></a></li>-->
+<!-- 			<li>This is a styles test item
+				<div class="buttons">
+					<a class="btn" href="#"><i class="fa fa-check complete" aria-hidden="true"></i></a>
+					<a class="btn" href="#"><i class="fas fa-times"></i></a>
+				</div>
+			</li> -->
 		</ul>
 		<!--<ul class="todo" id="completed"></ul>-->
 	</div>
